--- a/JQMobile Template/css/style.css
+++ b/JQMobile Template/css/style.css
@@ -1,5 +1,5 @@
 // write your CSS in here
 
-label.error{display:block; margin:10px 0; #cc0000;}
+label.error{display:block; margin:10px 0; color: #cc0000;}
 
-#myerrorslink{display: none;}
+#myerrorslink{display:none;}
